# palindoro_bot

./: .gitignore  Dockerfile  LICENSE  README.md  pallondoro.py  pyproject.toml
