[tool.poetry]
name = "palindoro-bot"
version = "0.1.0"
description = "Palindoro telegram bot"
authors = ["Marco Ghidinelli <marcogh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
